SecurityConfig 수정, Dockerfile 생성